banners: Fix gap issues when banner actions and close btn are removed.

--- a/banner.css
+++ b/banner.css
@@ -510,7 +510,7 @@
         ". . . . . . banner-close-btn banner-close-btn"
         ". . banner-label . banner-btns . banner-close-btn banner-close-btn"
         ". . . . . . banner-close-btn banner-close-btn";
-    --banner-grid-template-columns-lg: var(--banner-horizontal-padding) 0 auto minmax(6px, 1fr) auto 0 minmax(0, auto) var(--banner-horizontal-padding);
+    --banner-grid-template-columns-lg: var(--banner-horizontal-padding) 0 auto minmax(0, 1fr) auto 0 minmax(0, auto) var(--banner-horizontal-padding);
     --banner-grid-template-rows-lg: 5px auto 5px;
     --banner-grid-template-areas-md:
         ". . . . banner-close-btn banner-close-btn"
@@ -554,6 +554,7 @@
     grid-area: banner-btns;
     display: flex;
     gap: 8px;
+    margin-left: 6px;
 }
 
 .banner__close-btn {
@@ -564,7 +565,7 @@
 }
 
 .banner--navbar-alerts {
-    grid-template-columns: var(--banner-horizontal-padding) minmax(0, 1fr) auto 6px auto minmax(0, 1fr) minmax(0, auto) var(--banner-horizontal-padding);
+    grid-template-columns: var(--banner-horizontal-padding) minmax(0, 1fr) auto 0 auto minmax(0, 1fr) minmax(0, auto) var(--banner-horizontal-padding);
     border-bottom: 1px solid var(--color-banner-border);
     place-items: start center;
 }
@@ -595,6 +596,7 @@
 
     .banner__btns {
         flex-wrap: wrap;
+        margin-left: 0;
     }
 }
 
